--- a/page4.html
+++ b/page4.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>The Delightful Children from Down the Lane Have Returned!</h1>
     </div>
 
 <div class="content">
