--- a/page8.html
+++ b/page8.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Numbuh 1's Biggest Secret Unveiled!</h1>
     </div>
 
 <div class="content">
