--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Numbuh 5 Not What She Seems?</h1>
     </div>
 
 <div class="content">
