--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Numbuh 4 Is a Theif?!</h1>
     </div>
 
 <div class="content">
