--- a/page5.html
+++ b/page5.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Numbuh 3's Candy Secrets Revealed!</h1>
     </div>
 
 <div class="content">
