--- a/page6.html
+++ b/page6.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Numbuh 2's Newest Investion Causes Controversy</h1>
     </div>
 
 <div class="content">
