--- a/page7.html
+++ b/page7.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>Father's Newest Evil Plan Uncovered!</h1>
     </div>
 
 <div class="content">
