yeah you know the drill by now

--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,7 @@
 <div class="content">
     <h2>Sub-Headline</h2>
     <p>Clickbait</p>
-    <img src="images/knd_group.png" class="pic">
+    <img src="images/numbuh4.png" class="pic">
 
     <a href="index.html"><div id="back">
         <h3>Back</h3>
