--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body></body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Headline</h1>
+        <h1>KND's Top Agents and Enemies Spill Secrets</h1>
     </div>
 
 <div class="content">
