put in info and css

--- a/page2.html
+++ b/page2.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 5 Not What She Seems?</h1>
+        <h1>Unbelievable Facts About Numbuh 5!</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>You won't believe what tricks and skills Numbuh 5 has hidden up their sleeves!</h2>
+    <p>Get ready to be blown away by one of the coolest operatives in the Kids Next Door. From a mastery in stealth to even unknown musical skills, discover the multiskilled genius that makes Numbuh 5 unfortgettable in the force! Click to find out which skill puts her above the rest!</p>
     <img src="images/numbuh5.png" class="pic">
 
     <a href="index.html"><div id="back">
