--- a/page3.html
+++ b/page3.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 4 Is a Theif?!</h1>
+        <h1>Numbuh 4's CRAZIEST Stunt Yet?!</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Has Numbuh 4 really gone too far this time?</h2>
+    <p>Everyone knows how out-of-this-word Numbuh 4 can be when the going gets tough, but what happens when he aims to complete the "Mother of all Stunts"? Will he survive? Will he cost the force a fortune? Click to read and find out!</p>
     <img src="images/numbuh4.png" class="pic">
 
     <a href="index.html"><div id="back">
