--- a/page4.html
+++ b/page4.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>The Delightful Children from Down the Lane Have Returned!</h1>
+        <h1>The Delightful Children from Down the Lane Have Returned With a Surprise!</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>The supposed sweet darlings have an evil scheme waiting to be unleashed!</h2>
+    <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans throws anything they've attempted before out the window! Click to find out just exactly what they are plotting.</p>
     <img src="images/kng_delightful.png" class="pic">
 
     <a href="index.html"><div id="back">
