--- a/page5.html
+++ b/page5.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 3's Candy Secrets Revealed!</h1>
+        <h1>Numbuh 3's Secret Admirer?</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Has the lovable agent been swept away for good?</h2>
+    <p>Prepare for a love story for the ages! Recently it's been reported that Numbuh 3 has been receiving large amounts of her favorite snack: popcorn, but no one has stepped forward to claim responsibility. Could this gifter be a member of KND? You won't believe the truth!  </p>
     <img src="images/numbuh3.png" class="pic">
 
     <a href="index.html"><div id="back">
