--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
+    
     <div class="banner">
         <h1>KND's Top Agents and Enemies Spill Secrets</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Who is the real villain here?</h2>
+    <p>The everyday lives of the top five operatives for KND are often kept a secret from the outside world. However, secrets tend to spill after some time which has left the entire organization scrambling to find out the truth. Will their greatest enemies take advantage of this opportunity, or will their own secrets be revealed? Click to find out!</p>
     <img src="images/knd_group.png" class="pic">
 
     <a href="index.html"><div id="back">
