--- a/page6.html
+++ b/page6.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 2's Newest Investion Causes Controversy</h1>
+        <h1>Numbuh 2's Newest Investion Causes Panic</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Has his device revealed the plans of their enemy?</h2>
+    <p>Numbuh 2's newest gadget was finally tested out in the Sector V Treehouse early last week. The gadget was similar to a thermal camera, but could see through walls and floors with ease. When scanning the room the operatives noticed an unusal shape beneath the floor. Could someone, or something be hiding just below their main headquarters? Find out more here. </p>
     <img src="images/numbuh2.png" class="pic">
 
     <a href="index.html"><div id="back">
