--- a/page7.html
+++ b/page7.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Father's Newest Evil Plan Uncovered!</h1>
+        <h1>Father's Newest Plan Spoiled Before it Began?</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Were the tables turned on KND's greatest villain? </h2>
+    <p>After his previous defeat, Father has spent much time plotting in the shadows what his next move will be to take down the operatives of Kids Next Door. Sources tell that just as he was finishing preparing for a surprise attack, the unthinkable happened! Could Father be defeated once and for all? Does he have a secret plan not even Numbuh 1 could stop? Click to find out!  </p>
     <img src="images/knd_father.png" class="pic">
 
     <a href="index.html"><div id="back">
