--- a/page8.html
+++ b/page8.html
@@ -4,19 +4,19 @@
 <head>
 <meta charset="UFT-8">
 <title>KND Exposed</title>
-<link href="style.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/rfo2zox.css">
 </head>
 
-<body></body>
+<body>
 <div class="wrapper">
     <div class="banner">
         <h1>Numbuh 1's Biggest Secret Unveiled!</h1>
     </div>
 
 <div class="content">
-    <h2>Sub-Headline</h2>
-    <p>Clickbait</p>
+    <h2>Numbuh 1's greatest enemy may be closer than he thinks!</h2>
+    <p>After defeating so many adults' plans, it can be hard to imagine anything could phase the top operative of Sector V. A recent discovery shows however that one of the most trusted operatives at KND could actually be related to one of their greatest enemies. Who does Numbuh 1 secretly have ties with? Click to read more.</p>
     <img src="images/numbuh1.png" class="pic">
 
     <a href="index.html"><div id="back">
