trying to add typing effect

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 <div class="wrapper">
-    
+
     <div class="banner">
-        <h1>KND's Top Agents and Enemies Spill Secrets</h1>
+        <h1>KND's Top Agents and Enemies Exposed!</h1>
     </div>
 
 <div class="content">
-    <h2>Who is the real villain here?</h2>
+    <h2>What are the operatives hiding?</h2>
     <p>The everyday lives of the top five operatives for KND are often kept a secret from the outside world. However, secrets tend to spill after some time which has left the entire organization scrambling to find out the truth. Will their greatest enemies take advantage of this opportunity, or will their own secrets be revealed? Click to find out!</p>
     <img src="images/knd_group.png" class="pic">
 
