--- a/page3.html
+++ b/page3.html
@@ -15,15 +15,15 @@
     </div>
 
 <div class="content">
-    <h2>Has Numbuh 4 really gone too far this time?</h2>
+    <h2>Could he be putting the organization in danger?</h2>
     <p>Everyone knows how out-of-this-word Numbuh 4 can be when the going gets tough, but what happens when he aims to complete the "Mother of all Stunts"? Will he survive? Will he cost the force a fortune? Click to read and find out!</p>
     <img src="images/numbuh4.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page2.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="page4.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
