--- a/page4.html
+++ b/page4.html
@@ -11,19 +11,19 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>The Delightful Children from Down the Lane Have Returned With a Surprise!</h1>
+        <h1>The Delightful Children Have Returned!</h1>
     </div>
 
 <div class="content">
-    <h2>The supposed sweet darlings have an evil scheme waiting to be unleashed!</h2>
-    <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans throws anything they've attempted before out the window! Click to find out just exactly what they are plotting.</p>
+    <h2>Is an evil scheme waiting to be unleashed?</h2>
+    <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans throws anything they've attempted before out the window! Secret agents? Hidden escape rooms? The return of Father? Click to find out just exactly what they are plotting.</p>
     <img src="images/kng_delightful.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page3.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="page5.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
