--- a/page6.html
+++ b/page6.html
@@ -19,11 +19,11 @@
     <p>Numbuh 2's newest gadget was finally tested out in the Sector V Treehouse early last week. The gadget was similar to a thermal camera, but could see through walls and floors with ease. When scanning the room the operatives noticed an unusal shape beneath the floor. Could someone, or something be hiding just below their main headquarters? Find out more here. </p>
     <img src="images/numbuh2.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page5.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="page7.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
