--- a/page7.html
+++ b/page7.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Father's Newest Plan Spoiled Before it Began?</h1>
+        <h1>Father's Newest Plan Spoiled Early?</h1>
     </div>
 
 <div class="content">
@@ -19,11 +19,11 @@
     <p>After his previous defeat, Father has spent much time plotting in the shadows what his next move will be to take down the operatives of Kids Next Door. Sources tell that just as he was finishing preparing for a surprise attack, the unthinkable happened! Could Father be defeated once and for all? Does he have a secret plan not even Numbuh 1 could stop? Click to find out!  </p>
     <img src="images/knd_father.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page6.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="page8.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
