--- a/page8.html
+++ b/page8.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 1's Biggest Secret Unveiled!</h1>
+        <h1>Numbuh 1's Family Tree Surprise?</h1>
     </div>
 
 <div class="content">
@@ -19,11 +19,11 @@
     <p>After defeating so many adults' plans, it can be hard to imagine anything could phase the top operative of Sector V. A recent discovery shows however that one of the most trusted operatives at KND could actually be related to one of their greatest enemies. Who does Numbuh 1 secretly have ties with? Click to read more.</p>
     <img src="images/numbuh1.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page7.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="index.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
