--- a/page5.html
+++ b/page5.html
@@ -16,14 +16,14 @@
 
 <div class="content">
     <h2>Has the lovable agent been swept away for good?</h2>
-    <p>Prepare for a love story for the ages! Recently it's been reported that Numbuh 3 has been receiving large amounts of her favorite snack: popcorn, but no one has stepped forward to claim responsibility. Could this gifter be a member of KND? You won't believe the truth!  </p>
+    <p>Prepare for a love story for the ages! Recently it's been reported that Numbuh 3 has been receiving large amounts of her favorite snack: popcorn, but no one has stepped forward to claim responsibility. Could this gifter be a member of KND? The might just be a member of Sector V! You won't believe the truth!  </p>
     <img src="images/numbuh3.png" class="pic">
 
-    <a href="index.html"><div id="back">
+    <a href="page4.html"><div id="back">
         <h3>Back</h3>
     </div></a>
 
-    <a href="page2.html"><div id="next">
+    <a href="page6.html"><div id="next">
         <h3>Next</h3>
     </div> </a>
 
