fixed the typing animation

--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 4's CRAZIEST Stunt Yet?!</h1>
+        <h1>Is This Numbuh 4's CRAZIEST Stunt Yet?</h1>
     </div>
 
 <div class="content">
