--- a/page5.html
+++ b/page5.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 3's Secret Admirer?</h1>
+        <h1>Does Numbuh 3 Have a Secret Admirer?</h1>
     </div>
 
 <div class="content">
