--- a/page6.html
+++ b/page6.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Numbuh 2's Newest Investion Causes Panic</h1>
+        <h1>Numbuh 2's Newest Investion Causes Panic!</h1>
     </div>
 
 <div class="content">
