--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     </div>
 
 <div class="content">
-    <h2>What are the operatives hiding?</h2>
+    <h2>What are the Sector V operatives hiding?</h2>
     <p>The everyday lives of the top five operatives for KND are often kept a secret from the outside world. However, secrets tend to spill after some time which has left the entire organization scrambling to find out the truth. Will their greatest enemies take advantage of this opportunity, or will their own secrets be revealed? Click to find out!</p>
     <img src="images/knd_group.png" class="pic">
 
-    <a href="index.html"><div id="back">
-        <h3>Back</h3>
-    </div></a>
+ 
 
     <a href="page2.html"><div id="next">
         <h3>Next</h3>
