fixed height of site

--- a/page4.html
+++ b/page4.html
@@ -16,7 +16,7 @@
 
 <div class="content">
     <h2>Is an evil scheme waiting to be unleashed?</h2>
-    <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans throws anything they've attempted before out the window! Secret agents? Hidden escape rooms? The return of Father? Click to find out just exactly what they are plotting.</p>
+    <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans throws anything they've attempted before out the window! Secret agents? Hidden escape rooms? Could this signal the return of Father? Click to find out just exactly what they are plotting.</p>
     <img src="images/kng_delightful.png" class="pic">
 
     <a href="page3.html"><div id="back">
