--- a/page2.html
+++ b/page2.html
@@ -15,8 +15,8 @@
     </div>
 
 <div class="content">
-    <h2>You won't believe what tricks and skills Numbuh 5 has hidden up their sleeves!</h2>
-    <p>Get ready to be blown away by one of the coolest operatives in the Kids Next Door. From a mastery in stealth to even unknown musical skills, discover the multiskilled genius that makes Numbuh 5 unfortgettable in the force! Click to find out which skill puts her above the rest!</p>
+    <h2>You won't believe what's been up their sleeves!</h2>
+    <p>Get ready to be blown away by one of the coolest agents in the Kids Next Door. She's here to remind everyone that there's a reason she's a top operative in Sector V. From a mastery in stealth to even unknown musical skills, discover the multiskilled genius that makes Numbuh 5 unfortgettable in the force! Click to find out which skill puts her above the rest!</p>
     <img src="images/numbuh5.png" class="pic">
 
     <a href="index.html"><div id="back">
