--- a/page3.html
+++ b/page3.html
@@ -16,7 +16,7 @@
 
 <div class="content">
     <h2>Could he be putting the organization in danger?</h2>
-    <p>Everyone knows how out-of-this-word Numbuh 4 can be when the going gets tough, but what happens when he aims to complete the "Mother of all Stunts"? Sources tell us he hasn't even told the other members of Sector V what he has planned. Will he survive? Will he cost the force a fortune? Click to read and find out!</p>
+    <p>Everyone knows how out-of-this-world Numbuh 4 can be when the going gets tough, but what happens when he aims to complete the "Mother of all Stunts"? Sources tell us he hasn't even told the other members of Sector V what he has planned. Will he survive? Will he cost the force a fortune? Click to find out!</p>
     <img src="images/numbuh4.png" class="pic">
 
     <a href="page2.html"><div id="back">
