--- a/page8.html
+++ b/page8.html
@@ -15,7 +15,7 @@
     </div>
 
 <div class="content">
-    <h2>His greatest enemy may be closer than he thinks!</h2>
+    <h2>Is his greatest enemy closer than he thinks?</h2>
     <p>After defeating so many adults' plans, it can be hard to imagine anything could phase the top operative of Sector V. A recent discovery shows however that one of the most trusted operatives at KND could actually be related to one of their greatest enemies. Who does Numbuh 1 secretly have ties with? Could this bombshell rock the foundation itself? Click to read more.</p>
     <img src="images/numbuh1.png" class="pic">
 
