added hover gifs

--- a/page4.html
+++ b/page4.html
@@ -17,7 +17,7 @@
 <div class="content">
     <h2>Is their evil scheme about to be unleashed?</h2>
     <p>Don't be fooled by the innocent demeanor of these five children, as they are plotting to take down KND one by one! How will they achieve this? Their current plans puts anything they've tried before to shame. Secret agents? Hidden escape rooms? Could this signal the return of the dreaded Father? Click to find out just exactly what they are plotting.</p>
-    <img src="images/kng_delightful.png" class="pic">
+    <img src="images/knd_delightful.png" onmouseover="this.src='images/knd_delightful.gif'" onmouseout="this.src='images/knd_delightful.png'" class="pic">
 
     <a href="page3.html"><div id="back">
         <h3>Back</h3>
