--- a/page5.html
+++ b/page5.html
@@ -17,7 +17,7 @@
 <div class="content">
     <h2>Has the lovable agent been swept away for good?</h2>
     <p>Prepare for a love story for the ages! Recently it's been reported that Numbuh 3 has been receiving large amounts of her favorite snack: popcorn, but no one has stepped forward to claim responsibility. With the treat being left right at her doorstep, the force is left confused. Could this gifter be a member of KND? Are they possibly a high ranking member of Sector V? You won't believe the truth!  </p>
-    <img src="images/numbuh3.png" class="pic">
+    <img src="images/numbuh3.png" onmouseover="this.src='images/numbuh3.gif'" onmouseout="this.src='images/numbuh3.png'" class="pic">
 
     <a href="page4.html"><div id="back">
         <h3>Back</h3>
