--- a/page7.html
+++ b/page7.html
@@ -17,7 +17,7 @@
 <div class="content">
     <h2>Were the tables turned on KND's greatest villain? </h2>
     <p>After his last defeat, Father has spent time plotting in the shadows what his next move will be to take down the operatives of KND Sector V. Sources tell that just as he was finishing preparing for a surprise attack, the unthinkable occurred! Does he know something we don't? Will Father be defeated once and for all? Does he have a secret plan that not even Numbuh 1 could stop? Click to find out!  </p>
-    <img src="images/knd_father.png" class="pic">
+    <img src="images/knd_father.png" onmouseover="this.src='images/knd_father.gif'" onmouseout="this.src='images/knd_father.png'" class="pic">
 
     <a href="page6.html"><div id="back">
         <h3>Back</h3>
