changed index type

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="content">
     <h2>What could the Sector V operatives be hiding?</h2>
-    <p>The everyday lives of the top five operatives for KND are often kept a secret from the outside world. However, secrets tend to spill after some time which has left the entire organization scrambling to find out the truth. Will their greatest enemies take advantage of this opportunity, or will their own secrets be revealed? Click to find out!</p>
+    <p>The everyday lives of the top five operatives for KND are often kept a secret from the outside world. However, the secrets that tend to spill after some time which has left the entire organization scrambling to find out the truth. Will their greatest enemies take advantage of this opportunity, or will their own secrets be revealed in return? Click to find out!</p>
     <img src="images/knd_group.png" onmouseover="this.src='images/knd_group.gif'" onmouseout="this.src='images/knd_group.png'" class="pic">
 
  
