--- a/page2.html
+++ b/page2.html
@@ -11,12 +11,12 @@
 <body>
 <div class="wrapper">
     <div class="banner">
-        <h1>Unbelievable Facts About Numbuh 5!</h1>
+        <h1>Numbuh 5 taking Numbuh 4's rank?</h1>
     </div>
 
 <div class="content">
-    <h2>You won't believe what's been up their sleeves!</h2>
-    <p>Get ready to be blown away by one of the coolest agents in the Kids Next Door. She's here to remind everyone that there's a reason she's a top operative in Sector V. From a mastery in stealth to even unknown musical skills, discover the multiskilled genius that makes Numbuh 5 unfortgettable in the force! Click to find out which skill puts her above the rest!</p>
+    <h2>Is she going to overtake her own fellow operative?</h2>
+    <p>Numbuh 5 has never been one to stand by in the wings. She's here to remind everyone that there's a reason she's a top operative in Sector V. Recent discussions have led others to discover the multiskilled genius that makes Numbuh 5 unfortgettable in the force! Are her skills going to be the thing that ruins her own friendships? Read more to find out!</p>
     <img src="images/numbuh5.png"  onmouseover="this.src='images/numbuh5.gif'" onmouseout="this.src='images/numbuh5.png'" class="pic">
 
     <a href="index.html"><div id="back">
