--- a/page6.html
+++ b/page6.html
@@ -16,7 +16,7 @@
 
 <div class="content">
     <h2>Has his device revealed the plans of their enemy?</h2>
-    <p>Numbuh 2's newest gadget was finally completed early last week. The gadget was similar to a thermal camera, but could see through walls and floors with ease. When scanning the room the operatives noticed an unusal shape beneath the floor. Could someone, or <em>something</em> be hiding just below their main headquarters? Find out more here. </p>
+    <p>Numbuh 2's newest gadget was finally completed early last week. The gadget was similar to a thermal camera, but could see through walls and floors with ease. When scanning the room the operatives noticed an unusal shape beneath the floor. Could someone, or <em>something</em> be hiding just below their main headquarters? Click to read more! </p>
     <img src="images/numbuh2.png" onmouseover="this.src='images/numbuh2.gif'" onmouseout="this.src='images/numbuh2.png'" class="pic">
 
     <a href="page5.html"><div id="back">
